Added queries
