# api/swagger/swagger.yaml
@@ -108,6 +108,42 @@ paths:
         default:
           $ref: '#/responses/Error'
 
+  /device/{id}/production/{range}:
+    x-swagger-router-controller: production
+    get:
+      operationId: getProduction
+      security:
+      - Oauth:
+        - user
+      parameters:
+      - in: path
+        name: id
+        required: true
+        type: string
+      - in: path
+        name: range
+        required: true
+        type: string
+        enum: [
+          hour,
+          day,
+          week,
+          month,
+          year
+        ]
+      - in: query
+        name: end
+        required: false
+        type: string
+        format: date
+      responses:
+        200:
+          description: ok
+          schema:
+            type: object
+        default:
+          $ref: '#/responses/Error'
+
   /swagger:
       x-swagger-pipe: swagger_raw
 
